--- a/Msb205.qmd
+++ b/Msb205.qmd
@@ -34,15 +34,15 @@ library(car)
 
 # Innledning
 
-I denne studien tar vi for oss boligmarkedet i King County ved hjelp av hedoniske prismodeller, med et spesielt fokus på anvendelsen av spatial økonometri. Vår tilnærming innebærer en detaljert utforskning av hvordan ulike faktorer, både fysiske og lokasjonsbaserte, bidrar til å forme priser på eiendommer. Gjennom en kombinasjon av varierte datasett og avanserte teknikker innen spatial økonometri, sikter vi mot å avdekke de komplekse romlige dynamikkene som driver boligprisene i dette området.
+I denne oppgaven tar vi for oss boligmarkedet i King County ved hjelp av hedoniske prismodeller, med et spesielt fokus på anvendelsen av spatial økonometri. Vår tilnærming har en detaljert utforskning av hvordan ulike faktorer, både fysiske og lokasjonsbaserte, bidrar til å forme boligpriser. Gjennom en kombinasjon av varierte datasett og avanserte teknikker innen spatial økonometri, er vårt formål å avdekke de komplekse romlige dynamikkene som driver boligprisene i området.
 
-Kjernen i vårt datasett består av data om individuelle boliger i King County, inkludert elementer som salgsdato, pris, antall soverom og bad, total størrelse, antall etasjer, utsikt, og tilstedeværelsen av vannfront. Disse attributtene gir oss innsikt i boligenes fysiske og estetiske kvaliteter. Viktigere, vi integrerer nøyaktige geografiske koordinater for hver eiendom, noe som muliggjør beregning av avstander til sentrale forretningsdistrikter (CBD) og andre nøkkelpunkter. Denne romlige komponenten er avgjørende for å forstå hvordan lokasjon påvirker boligverdier.
+Kjernen i vårt datasett består av data om individuelle boliger i King County, inkludert elementer som salgsdato, pris, antall soverom og bad, total størrelse, antall etasjer, utsikt og tilstedeværelsen av sjøutsikt. Disse egenskapene gir oss innsikt i boligenes fysiske og estetiske kvaliteter. Vi integrerer nøyaktige geografiske koordinater for hver eiendom, noe som gjør beregning av avstander til sentrale forretningsdistrikter (CBD) og andre viktige steder mulig. Det er en romlige komponent som er avgjørende for å forstå hvordan lokasjon påvirker boligpriser.
 
-Videre beriker vi vår analyse med demografisk og økonomisk informasjon, som inntektsnivåer og etnisk sammensetning i boligenes nabolag. Denne tilnærmingen tillater oss å utforske hvordan sosioøkonomiske forhold i et område påvirker boligpriser og dermed gi en mer helhetlig forståelse av markedet.
+Videre vil analysen vår inneholde både demografisk og økonomisk informasjon, som inntektsnivåer og etnisk sammensetning i nabolagene. Ved bruk av denne tilnærmingen kan vi undersøke hvordan sosioøkonomiske forhold i et område påvirker boligpriser, noe som vil være med på å gi en mer helhetlig forståelse av markedet.
 
-Ved å anvende metoder innen spatial økonometri, inkludert undersøkelse av romlig autokorrelasjon og bruk av romlige regresjonsmodeller, vil vi identifisere og analysere romlige mønstre og sammenhenger. Denne tilnærmingen er essensiell for å adressere potensielle romlige avhengigheter og heterogenitet i dataene, som er kritisk i boligprisstudier. Vi forventer at denne analytiske tilnærmingen vil avsløre dyptgående innsikter i de romlige mekanismene som påvirker boligpriser i King County, og hvordan disse mekanismene interagerer med boligenes fysiske og sosioøkonomiske karakteristikker.
+Ved å anvende metoder innen spatial økonometri, inkludert undersøkelse av romlig autokorrelasjon og bruk av romlige regresjonsmodeller, skal vi identifisere og analysere romlige mønstre og sammenhenger. Denne tilnærmingen er viktig for å adressere potensielle romlige avhengigheter og heterogenitet i dataene. Vi forventer at denne analytiske tilnærmingen vil føre til innsikter i de romlige mekanismene som påvirker boligpriser i King County, og hvordan de gjør det.
 
-## 1. Raw data
+# 1. Raw data
 
 ```{r Oppgave 1}
 kc_house_data <- read.csv("Data/kc_house_data.csv")
@@ -50,7 +50,7 @@ kc_house_data <- read.csv("Data/kc_house_data.csv")
 ```
 
 ```{r}
-# skrevet om til litt mer tidyvelsk
+# skrevet om til litt mer tidyverse
 kc_house_data <- kc_house_data  |> 
   mutate(
     date = ymd_hms(date),
@@ -113,7 +113,7 @@ kc_house_data_sf <- kc_house_data_sf %>%
 # kc_house_data_sf$dest_CBD <- avstand_til_cbd_km #inn i datasett
 ```
 
-Utfører romlige koblinger og beregner avstander til sentrale forretningsdistrikter (CBD), som er sentralt i hedoniske prisanalyser.
+Beregner avstander til sentrale forretningsdistrikter (CBD), som er sentralt i hedoniske prisanalyser.
 
 ```{r}
 rm(cbd, cbd_sf, kc_house_data) #fjerne unødvendige datasett
@@ -121,7 +121,7 @@ kc_house_data_oppg1 <- kc_house_data_sf #endre ferdig datasett til "kc_house_dat
 rm(kc_house_data_sf) #fjerne 
 ```
 
-## 2. Demografi
+# 2. Demografi
 
 ```{r Laste inn shp-fil}
 #Last ned WADOH Environmental Health Disparities Index Calculated for King County. 
@@ -160,7 +160,7 @@ WADOH_King_County <- WADOH_King_County %>%
 WADOH_King_County <- st_transform(WADOH_King_County, 2926)
 ```
 
-### Inntekt i WADOH K_C
+## Inntekt i WADOH K_C
 
 ```{r Legge inn datasett. Dette fikk jeg ikke lastet ned som dbf-fil}
 #acs_b19101_familyincome <- read.csv("Data\acs_b19101_familyincome.csv")
@@ -187,7 +187,7 @@ acs_b19101_familyincome <- acs_b19101_familyincome %>%
     select(GEOIDTRT, low, mid, high) 
 ```
 
-### Etnisitet i WADOH K_C
+## Etnisitet i WADOH K_C
 
 ```{r}
 #Legge inn datasett etnisitet. 
@@ -222,7 +222,7 @@ acs_b02001_race <- acs_b02001_race %>%
   select(GEOID:TRACTLABEL, andel_hvit_alene:andel_blandet)
 ```
 
-## 3. Husdata; spatial join
+# 3. Husdata; spatial join
 
 ```{r Laste ned kart}
 kc_house_data_oppg1 <- st_join(kc_house_data_oppg1, WADOH_King_County)
@@ -258,27 +258,17 @@ KC_husdata <- kc_house_data_oppg1
 st_write(KC_husdata, "KC_husdata.gpkg", append = FALSE)
 ```
 
-# EDA i GeoDA
+# 4. EDA i GeoDA
 
-Spatial EDA (Exploratory Data Analysis) er en viktig prosess i geografisk og romlig analyse som hjelper til med å forstå mønstre, forhold, og tendenser i geografiske data. Denne tilnærmingen er spesielt relevant for analyse av boligmarkedet.
+Spatial EDA (Exploratory Data Analysis) er viktig i geografisk og romlig analyse. Det hjelper til med å forstå mønstre, forhold og tendenser i geografiske data. Dette er spesielt relevant for analyse av boligmarkedet.
 
-#### I) Lag et nytt prosjekt i GeoDA
-
-Bruken av GeoDA for EDA og videre modellanalyse vil gi verdifull innsikt i de romlige egenskapene til dataene våre.
-
-#### II) Last inn husdataene via .gpkg filen lagret overnfor
-
-Den hedoniske huspis modellen, inkludert OLS og flere romlige regresjonsmodeller, er en solid tilnærming for å forstå de underliggende driverne av boligpriser[@chi2020].
-
-#### III) Generer en vekt fil utfra 3 og 10 nærmeste nabo
+Den hedoniske boligprismodellen, inkludert OLS og flere romlige regresjonsmodeller, er en solid tilnærming for å forstå de underliggende driverne av boligpriser[@chi2020].
 
 K-nærmeste naboer (k-NN) er en teknikk i romlig analyse som brukes til å definere nabolagsstrukturer basert på geografiske enheter, som foreslått av [@chi2020]. Denne metoden identifiserer et forhåndsbestemt antall ('k') nærmeste naboer for hver observasjon, basert på avstander mellom punkter. @anselin1988 fremhever at k-NN tilbyr en løsning på utfordringen med avstandsbaserte vektmatriser, som ofte produserer for mange naboer i urbane områder og for få i landlige områder. Ifølge @altman1992, fungerer k-NN ved å finne et sett med de nærmeste naboene til et gitt datapunkt og deretter estimere en verdi for dette punktet basert på naboene. Dette prinsippet støttes av ideen om at observasjoner som er nærmere hverandre geografisk, sannsynligvis vil være mer like i deres avhengige variabler. K-NN-teknikken anses som spesielt nyttig i romlige analyser der avstand spiller en nøkkelrolle, som i klyngedannelse, romlig interpolering eller romlig regresjon. @altman1992 diskuterer også hvordan valg av 'k' påvirker modellens ytelse, inkludert forventningsskjevhet og varians.
 
-#### IV) Prøv å finne ut hvor de små og dyre, de store og dyre, de billige og store og de små og billige boligene ligger (prøv Bivariate Morans I)
-
 Bivariate Moran's I er en statistisk metode brukt for å måle romlig autokorrelasjon mellom to forskjellige variabler over en geografisk region. Dette er en utvidelse av den mer tradisjonelle Moran's I, som vanligvis brukes for å måle romlig autokorrelasjon for en enkelt variabel. Bivariate Moran's I hjelper med å forstå om det er et romlig mønster i hvordan to variabler relaterer seg til hverandre over et geografisk område.
 
-**3 narmeste naboer**
+**3 nærmeste naboer**
 
 ![](Data/img/Skjermbilde%202023-11-20%20094933.png)
 
@@ -306,10 +296,6 @@ Bivariate Moran's I er en statistisk metode brukt for å måle romlig autokorrel
 
 ![](Data/img/Skjermbilde%202023-11-20%20100232.png)
 
-#### V) Dere kan evt også eksprementere med SAR, SEM, og lm modeller i GeoDA
-
-## 5. Returner så til Quarto dokumentet.
-
 Funnene våre i GeoDa tyder på at de dyre boligene i King County i hovedsak ligger i den nordlige delen av regionen. Det er mange dyre boliger i Seattle og Bellevue. De dyre boligene ligger langs kysten. I sør og i rurale områder innover i landet er boligene billigere.
 
 Vi bruker signifikanskart for å visualisere statistisk signifikans av prisvariabelen. I kartet beskriver fargen p-verdien for variabelen. Grå er ikke signifikant, og lys grønn betyr et signifikansnivå p = 0,05, mellomgrønn p-verdi 0,01 og mørk grå p-verdi på 0,001.  P-verdien forteller oss hvor sannsynlig det er at vi ville fått det observerte resultatet dersom nullhypotesen var sann. P = 0,05 betyr at det er 5% sannsynlighet for at det observerte er tilfeldig.\
@@ -322,7 +308,11 @@ Vi har 3011 mellomgrønne punkter, som betyr at de har et signifikansnivå på u
 
 Vi har 4326 punkter som er mørkegrønne, dette betyr at disse punktene har et signifikansnivå på maks p=0,001. Det vil si at det er under 1% sannsynlighet for at disse prisene er tilfeldig. ii. Definer mint tre hedonske modeller.
 
-#### 1. En null modell med bare huskarakteristika og tids-dummier (year_month)
+# 5. Hedoniske boligmodeller
+
+En hedonisk boligmodell er en økonometrisk modell. Den brukes for å estimere verdien av en boligen basert på dens egenskaper; størrelse, beliggenhet, alder, tilstand osv. I en slik modell er verdien av boligen lik summen av prisen på de individuelle egenskapene. Det gjør man ved å estimere verdien av hver egenskap og beregne den relative betydningen av disse egenskapene for boligprisene. Dermed kan man også forstå hva som påvirker boligprisene. Nå skal vi formulere tre hedoniske modeller.
+
+## 1. En null modell med bare huskarakteristika og tids-dummier (year_month)
 
 En enkel nullmodell som bare inkluderer husets karakteristikker og tidsdummier. Denne modellen kan brukes som en referansemodell for å sammenligne med mer komplekse modeller.
 
@@ -375,7 +365,7 @@ hedon3 %>%
                      white_adjust = hc1)
 ```
 
-#### 2. En modell med huskarakteristika, dist_CBD, relevante tract-variabler og tids-dummier.
+## 2. En modell med huskarakteristika, dist_CBD, relevante tract-variabler og tids-dummier.
 
 Denne modellen inkluderer også distansen til CBD (Central Business District) og relevante tract-variabler. Dette kan være nyttig for å undersøke hvordan avstanden til sentrum og andre lokale faktorer påvirker boligprisene.
 
@@ -404,7 +394,7 @@ mod2 <- lm(price ~ bedrooms + bathrooms + sqft_living + sqft_living15 + sqft_lot
 summary(mod2)
 ```
 
-#### 3. En modell med huskarakteristika, dist_CBD, EHD indeks, (eventuelt inntektsvariabel) og tids-dummier.
+## 3. En modell med huskarakteristika, dist_CBD, EHD indeks, (eventuelt inntektsvariabel) og tids-dummier.
 
 Den tredje modellen inkluderer også EHD-indeksen (Environmental Health Index) eller en inntektsvariabel. Dette kan være nyttig for å undersøke hvordan miljøkvalitet og inntekt påvirker boligprisene.
 
@@ -416,31 +406,35 @@ summary(mode3)
 
 ```
 
-#### 
+## Test og diskuter hvilken modell som er best. @mona
 
-iii\. Rapporter de tre modellen i en regresjonstabell (se eksemplet
+# 6. Bruk en simultan test på tids-dummiene
 
-med modelsummary() og flextable ovenfor). Bruk robuste
+```{r Kan du ligge inn riktig navn på de robuste modellene?}
+msummary(list("Model 1" = modell1_robust, "Model 2" = modell2_robust, "Model 3" = modell3_robust), output = "flextable")
+```
 
-standard errors. Rapporter t-verdien som er det vanligste innen
+```{r}
+lm_navnpåmodell1
+lm_navnpåmodell2
+lm_navnpåmodell3
+```
 
-økonometri.
+Velge hvilken som er best:
 
-iv\. Test og diskuter hvilken modell som er best. (Ta gjerne også en
+Se på t-verdiene for hver variabel i modellen. En t-verdi på 2 eller høyere indikerer vanligvis at variabelen er signifikant forskjellig fra null. Du kan også se på R-kvadratverdien for hver modell, som gir en indikasjon på hvor mye av variasjonen i den avhengige variabelen som forklares av de uavhengige variablene i modellen. En høyere R-kvadratverdi indikerer at modellen gir en bedre tilpasning til dataene.
 
-titt på plot(\<lm_navnet\>))
+Bruk informasjonskriterier som AIC eller BIC til å sammenligne modellene. Disse kriteriene tar hensyn til både modellens tilpasning til dataene og dens kompleksitet, og gir en måte å sammenligne modeller med forskjellige antall variabler.
 
-## 6. Bruk en simultan test på tids-dummiene
+AIC = 2k - 2ln(L) BIC = kln(n) - 2ln(L)
 
-for å avgjøre om vi
+k er antall parametere i modellen n er antall observasjoner i datasettet L er maksimumsverdien av sannsynlighetsfunksjonen for modellen.
 
-trenger disse i modellen (car::linearHypothesis()) med opsjonen
+For begge kriteriene gjelder at lavere verdier indikerer en bedre modell. Når du sammenligner modeller, velger du den modellen med lavest AIC eller BIC.
 
-white_adjust = "hc3" eller "hc4" eller også eventuelt "hc1" hvis dere
+Vurder om modellen gir meningsfulle og informative resultater som svarer på forskningsspørsmålet ditt. Hvis en modell gir resultater som ikke gir mening eller ikke svarer på forskningsspørsmålet, kan det hende at den ikke er den beste modellen for ditt formål.
 
-ønsker å bruke Stata sin default.
-
-### Hedonic House Prise model
+## Hedonic House Prise model
 
 Den hedoniske prisfunksjonen kan brukes for å bestemme hvor mye mer som må betales for en eiendom med en ekstra enhet av en bestemt boligkarakteristikk [@day2001]. Dette er kjent som den implisitte prisen for en eiendomsegenskap; implisitt fordi den marginale prisen på en egenskap indirekte avsløres gjennom de beløp husholdninger er forberedt på å betale for hele eiendommen, der den spesielle egenskapen bare er en del [@day2001].
 
@@ -482,7 +476,7 @@ X1, X2, ..., Xn er de uavhengige variablene som kan omfatte husets størrelse, a
 
 I en romlig kontekst må vi også vurdere mulig romlig avhengighet, hvor verdien av Y for en observasjon kan være korrelert med verdier av Y for naboopplevelser i geografisk rom. Dette kan håndteres ved å inkludere et romlig lag i modellen eller ved å justere standardfeilene for å ta hensyn til romlig autokorrelasjon.
 
-## 7. Spatial Regressions
+# 7. Spatial Regressions
 
 i\. Last gruppens utvalg fra relevant .gpkg fil (tallene er seed
 
@@ -538,36 +532,16 @@ For å teste for og håndtere romlig autokorrelasjon i en OLS-modell, kan man br
 
 # Diskusjon av resultatene
 
-i\. In this exercise you have estimated several hedonic price functions.
+i\. En hedonisk boligprismodell er en form for regressjonsmodell som brukes for å estimere verdien av ulike egenskaper (attributter) som bidrar til den totale prisen på en bolig. Denne modellen antyder at prisen på en bolig er summen av prisen på dens individuelle egenskaper. For eksempel, kan en boligpris være summen av prisen på antall bad, beliggenhet, størrelse osv. Vi har problemer med at kodene ikke virker hos meg (Maren), men en grafisk fremstilling av en slik modell kan for eksempel vise boligprisen på y-aksen og de forskjellige egenskapene på x-aksen, med en linje som representerer den estimerte sammenhengen mellom egenskapene og boligprisen.
 
-What is the economic interpretation of the hedonic house price
+ii\. I hver av disse modellene vises de estimerte koeffisientene forventet endring i variabelen, gitt alt annet likt. For eksempel kan en koeffisient på 0,2 for variabelen "bathrooms" i en OLS-modell tolkes som at en økning i et antall bad vil øke prisen med 0,2 (i logaritmisk skala).
 
-model? Use a graphical presentation in our answer.
+I en SEM, SAR, SDEM og SLX vil det være samme tolkning av koeffisientene, men disse modellene tar også hensyn til romlig autokorrelasjon. Altså at prisene i et område kan avhenge av prisene i områdene rundt.
 
-ii\. You have estimated an OLS model, a spatial error model (SEM),
+iii\. For å avgjøre om de estimerte koeffisientene er signifikante, kan vi se på p-verdiene. Hvis p-verdien er mindre enn 0,05, er det vanlig å konkludere med at koeffisienten er statistisk signifikant. For å avgjøre om koeffisientene gir mening, kan man sammenligne det med hva man forventer. For eksempel bør koeffisienten for "bathrooms" være positiv, fordi vi forventer at prisen vil øke med økt antall bad.
 
-a spatial lag model (SAR), a SLX model and a spatial Durbin
+iv\. I SAR-modellen kan vi bruke de estimerte effektene for å få et mål på prisene. Dette kan vi gjøre ved å multiplisere koeffisientene med de gjennomsnittlige verdiene av tilsvarende variabler.
 
-Error Model (SDEM). In each of these models you shall interpret
-
-the estimated coefficients. You can use two estimated coefficients
-
-in each model for this task. What we are interested in is the
-
-economic content of coefficients in view of the hedonic theory.
-
-iii\. Are the estimated coefficients you have chosen to study in each
-
-model significant and reasonable regarding sign and size?
-
-iv\. For the SAR model, you must use the estimated impacts to get
-
-a measure of the implicit prices.
-
-v\. Use two estimated impacts (direct, indirect, and total impacts
-
-related to each variable), and give an economic interpretation of
-
-these impacts.
+v\. Estimerte effekter (direkte, indirekte og totale effekter) gir en økonomisk tolkning av hvordan endringer i en variabel vil påvirke boligprisen. Både direkte og gjennom effekten på andre variabler. For eksempel vil en direkte effekt av en økning i antall bad kan være en økning i boligprisen, mens en indirekte effekt kunne være at en økning i antall bad øker nabolagets snitt-boligpris, som da igjen vil øke prisen på boligen. Den totale effekten er summen av den direkte og indirekte effekten.
 
 # Oppsummering/konklusjon
